updateRequireList
